--- a/Code_and_Dataset/Customer_Clustering_and_Churn_Prediction.ipynb
+++ b/Code_and_Dataset/Customer_Clustering_and_Churn_Prediction.ipynb
@@ -34,7 +34,7 @@
     "- [4. Neural Network Models](#4.-Neural-Network-Models)\n",
     "    * [4.1 Training the Model with Imbalanced Data](#4.1-Training-the-Model-with-Imbalanced-Data)\n",
     "    * [4.2 Data Resampling and Model Training with New Data](#4.2-Data-Resampling-and-Model-Training-with-New-Data)\n",
-    "- [5. Beyond the Accuracy Metric: Receiver Operator Characteristic (ROC) Curve](#5.-Beyond-the-Accuracy-Metric:-Receiver-Operator-Characteristic-(ROC)-Curve)"
+    "- [5. Beyond the Accuracy Metric: Receiver Operator Characteristic ROC Curve](#5.-Beyond-the-Accuracy-Metric:-Receiver-Operator-Characteristic-ROC-Curve)"
    ]
   },
   {
@@ -1532,7 +1532,7 @@
     "id": "QmPAOPfrXZYC"
    },
    "source": [
-    "## 5. Beyond the Accuracy Metric: Receiver Operator Characteristic (ROC) Curve\n",
+    "## 5. Beyond the Accuracy Metric: Receiver Operator Characteristic ROC Curve\n",
     "\n",
     "As [Tom Fawcett](http://www.svds.com/learning-imbalanced-classes/) states, **You can only make progress if you’re measuring the right thing**. In other words, **don’t use accuracy to evaluate your classifier!**\n",
     "\n",
